--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "colors": "^0.6.2",
     "cli-table": "^0.3.0",
     "sprintfjs": "^1.1.4",
-    "sprintf-js": "0.0.7"
+    "sprintf-js": "0.0.7",
+    "strip-ansi": "^1.0.0",
+    "js-yaml": "^3.1.0",
+    "swagger-validate": "^0.1.3"
   }
 }
